// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should exclude specific files from results 1`] = `
"// BETTERER RESULTS V2.
exports[\`regexp no hack comments\`] = {
  value: \`{
    \\"src/exclude.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ],
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should exclude specific files from results 2`] = `
"// BETTERER RESULTS V2.
exports[\`regexp no hack comments\`] = {
  value: \`{
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should exclude specific files from results 3`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" got better! 😍",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "1 test got better! 😍",
]
`;
